--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -19,11 +19,13 @@
         <button class="button-56" role="button">Start now</button>
       </div>
       <div class="col-span-12 md:col-span-6 lg:col-span-5 xxl:col-span-6 ll-image mt-10 md:mt-0">
-        <img class="ml-auto" src="assets/images/hero3.png" alt="Hero" />
+        <img class="hero ml-auto" src="assets/images/hero3.png" alt="Hero" />
       </div>
     </div>
   </div>
 </div>
+
+<app-category></app-category>
 
 <div class="ll-service-area">
   <div class="container">
@@ -56,7 +58,7 @@
 <app-video-section></app-video-section>
 -->
 
-<app-category></app-category>
+
 
 <!--
   <ll-home-products></ll-home-products>
