--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -62,9 +62,16 @@ body {
  // Global colors
 :root 
 {
+   --darker-blue: #19243B;
+   --dark-blue : #21395F;
+   --blue: #205ADF;
    --blue2: #7d9ecc;
-   --blue: #5179af;
-   --pinky: #ebdbcd;
-   --purple : #B092DA;
+   --blue3:#3C6173;
+   --light-blue: #95D4E1;
+   --old-blue: #5179af;
+   --dark-purple : #411B32;
+   --purple : #6343CD;
+   --pinky: #FB88FF;
+   --old-purple : #B092DA;
    --grey : #DCDCDC;
 }
