--- a/client/src/app/product/product-list/product-list.component.html
+++ b/client/src/app/product/product-list/product-list.component.html
@@ -71,56 +71,50 @@
   </div>
 </div>
 
-<app-fancy-cards></app-fancy-cards>
-<!-- 
+  <div class="py-24 bg-gray-200">
+  <div class="old-container">
+    <div>
+      <h2 class="text-center mb-8">Choose your model
+        to calculate the cost:</h2>
+    </div>
+    <div class="flex items-center flex-wrap -mx-4 card-container">
+      </div>
 
-
-<div class="ll-products-area mb-24">
-  <div class="container">
-    <div class="grid grid-cols-12 gap-6 xxl:gap-8" *ngIf="isLoaded">
-      <div *ngFor="let product of products" class="col-span-12 md:col-span-6 xl:col-span-4">
-        <mat-card class="ll-product">
-          <img mat-card-image [src]="product?.images[0]" alt="{{ product.name }}" style="width: 100%; margin: 0 0 20px" />
-          <mat-card-content class="flex">
-            <div class="flex-none w-10">
-              <img src="{{ product?.created_by?.avatar }}" alt="product?.created_by?.name" />
+      <!-- <div 
+        *ngFor="let prod of products" 
+      class="w-full sm:w-1/2 lg:w-3/12 px-2 xxl:px-4 mt-4">
+        <div class="member">
+          <div class="member__image">
+            <img src="{{prod.photo}}" alt="Team photo" />
+          </div>
+          <div class="member__desc px-6 pt-2 pb-8">
+            <h3 class="name font-medium text-xl">{{prod.name}}</h3>
+            <h6 class="designation font-light text-sm">Up to :{{prod.upPrice}}$</h6>
+          </div>
+        </div>
+      </div>  -->
+      <div class="prodcuts-container">
+      <div class="product-card" *ngFor="let prod of products" [attr.data-index]="i">
+        <div class="badge">Up to ${{prod.upPrice}}</div>
+        <div class="product-tumb">
+          <img src="{{prod.photo}}" alt="">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">iPhone</span>
+          <h4><a href="">{{prod.name}}</a></h4>
+            <button class="sell-btn" mat-flat-button >sell now</button>
+          <!-- <div class="product-bottom-details">
+            <div class="product-price">Up to ${{prod.upPrice}}</div>
+            <div class="product-links">
+              <button>sell now</button>
             </div>
-            <div class="flex-grow pl-3">
-              <h4 class="ll-product__creator">{{ product?.created_by?.name }}</h4>
-              <h2 class="ll-product__name">
-                <a [routerLink]="['/products', product.id]">{{ product.name }}</a>
-              </h2>
-              <div class="flex justify-between mt-5">
-                <div class="ll-product__price-label">Prices:</div>
-                <div class="ll-product__price text-accent font-bold">€{{ product.price }}</div>
-              </div>
-            </div>
-          </mat-card-content>
-          <mat-card-actions class="ll-product__action flex justify-between">
-            <div class="flex-1 text-center flex items-center justify-center">
-              <mat-icon color="warn">star</mat-icon> {{ product.rating }}/5
-            </div>
-            <div class="flex-1 text-center">
-              <a [routerLink]="['/products', product.id]" mat-raised-button color="warn" class="px-4">Read More</a>
-            </div>
-          </mat-card-actions>
-        </mat-card>
+          </div> -->
+        </div>
       </div>
     </div>
-    <div *ngIf="!isLoaded">
-      <ngx-skeleton-loader 
-        count="9"
-        appearance="circle"
-        [theme]="{ 
-          'border-radius': '5px',
-          height: '280px',
-          width: 'calc(33% - 10px)'
-        }"
-      ></ngx-skeleton-loader>
-    </div>
   </div>
-</div>
--->
+   </div> 
+
 <div class="ll-find-more mt-10 mb-36">
   <div class="container rounded-md">
     <h2 class="ll-find-more__heading">Didn't find what you were looking for? There is more we can do for you.</h2>
