--- a/client/src/app/shared/components/header/header.component.scss
+++ b/client/src/app/shared/components/header/header.component.scss
@@ -5,9 +5,10 @@
     @apply fixed -inset-x-0 top-0;
     padding: 15px 0;
     z-index: 9999;
-    background-color: #ffffff;
+    background-color: transparent;
     transition: background-color 0.5s ease;
   }
+  color : white;
 }
 .logo {
   max-width: 120px;
