--- a/client/src/app/dashboard/devices/add-devices/add-devices.component.html
+++ b/client/src/app/dashboard/devices/add-devices/add-devices.component.html
@@ -1,1 +1,52 @@
-<p>add-devices works!</p>
+
+
+  <div class="container">
+    <div class="grid grid-cols-12 gap-4 lg:gap-8 xxl:gap-16">
+      <div class="contact__form col-span-12 lg:col-span-12">
+        <div class="mb-8">
+          <h3>Add new device to the product : {{data.name}} </h3>
+          <p>Then you can add devices to this product !</p>
+        </div>
+        <form [formGroup]="deviceform">
+          
+            <input type="text" 
+            placeholder="15GB RAM, 30GB ..." 
+            class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" 
+            formControlName="characteristics"
+            />
+            <input
+              type="number"
+              placeholder="price of a new condition"
+              class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5"
+              formControlName="newcondition"
+            />
+          <input type="text"
+           placeholder="price of a good condition"
+           class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" 
+           formControlName="goodcondition"
+           />
+           <input type="text"
+           placeholder="price of a good condition"
+           class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" 
+           formControlName="poorcondition"
+           />
+           <input type="text"
+           placeholder="price of a good condition"
+           class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" 
+           formControlName="faultycondition"
+           />
+          
+          <button 
+          class="px-5 py-2 text-white mt-5 rounded font-medium"
+          style="background-color: var(--blue);"
+          [disabled]="deviceform.pristine || deviceform.invalid" 
+          (click)="addDevice()">
+          Add device
+          </button>
+        </form>
+      </div>
+      
+
+    </div>
+  </div>
+
