--- a/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
+++ b/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
@@ -9,7 +9,7 @@
         <mat-nav-list class="_sidenav">
           <a
             mat-list-item
-            routerLink="/dashboard"
+            routerLink="/dashboard-naim-adminvv1"
             [routerLinkActiveOptions]="{ exact: true }"
             routerLinkActive="bg-gray-200"
             class="font-semibold text-gray-500 hover:text-primary"
@@ -17,21 +17,21 @@
           >
           <a
             mat-list-item
-            routerLink="/dashboard/profile"
+            routerLink="/dashboard-naim-adminvv1/profile"
             routerLinkActive="bg-gray-200"
             class="font-semibold text-gray-500 hover:text-primary"
             ><mat-icon class="mr-2">account_circle</mat-icon> View my profile</a
           >
           <a
             mat-list-item
-            routerLink="/dashboard/saved-items"
+            routerLink="/dashboard-naim-adminvv1/saved-items"
             routerLinkActive="bg-gray-200"
             class="font-semibold text-gray-500 hover:text-primary"
             ><mat-icon class="mr-2">list</mat-icon> Saved Items</a
           >
           <a
             mat-list-item
-            routerLink="/dashboard/orders"
+            routerLink="/dashboard-naim-adminvv1/orders"
             routerLinkActive="bg-gray-200"
             class="font-semibold text-gray-500 hover:text-primary"
             ><mat-icon class="mr-2">article</mat-icon> Orders</a
@@ -80,7 +80,7 @@
                   <mat-nav-list class="_sidenav">
                     <a
                       mat-list-item
-                      routerLink="/dashboard"
+                      routerLink="/dashboard-naim-adminvv1"
                       [routerLinkActiveOptions]="{ exact: true }"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
@@ -88,21 +88,21 @@
                     >
                     <a
                       mat-list-item
-                      routerLink="/dashboard/profile"
+                      routerLink="/dashboard-naim-adminvv1/profile"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
                       ><mat-icon class="mr-2">account_circle</mat-icon> View my profile</a
                     >
                     <a
                       mat-list-item
-                      routerLink="/dashboard/saved-items"
+                      routerLink="/dashboard-naim-adminvv1/saved-items"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
                       ><mat-icon class="mr-2">list</mat-icon> Saved Items</a
                     >
                     <a
                       mat-list-item
-                      routerLink="/dashboard/orders"
+                      routerLink="/dashboard-naim-adminvv1/orders"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
                       ><mat-icon class="mr-2">article</mat-icon> Orders</a
