--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,11 +3,11 @@
   <div class="container">
     <div class="grid grid-cols-12 gap-x-6">
       <div class="col-span-12 md:col-span-6 lg:col-span-7 xxl:col-span-6 ll-hero-text">
-        <h1 class="lg:mt-12 text-white font-bold">
+        <h1 class="lg:mt-12 text-white font-bold" style="font-family: 'Righteous', cursive;">
           Sell Your New and Used Apple Electronics.
         </h1>
         <div class="flex flex-wrap items-center mt-4">
-          <div class="inline-block mr-5">We Buy:</div>
+          <div class="inline-block mr-5 text-white">We Buy:</div>
           <a href="" class="rounded-full bg-white px-5 py-2 bg-opacity-40 mr-3">iPhone</a>
           <a href="" class="rounded-full bg-white px-5 py-2 bg-opacity-40 mr-3">Mac</a>
           <a href="" class="rounded-full bg-white px-5 py-2 bg-opacity-40 mr-3">iWatch</a>
