--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,12 +1,53 @@
-<div class="pt-52 pb-32 bg-gray-100 text-center">
-  <div class="container">
-    <h3>Contact Us</h3>
-    <nav class="breadcrumb flex justify-center items-center">
-      <a class="px-1 mr-3 text-gray-500 hover:text-black" [routerLink]="'/'">Home</a>
-      <a class="px-1" href="javascript:void(0)" class="text-accent">Contact</a>
-    </nav>
+
+<div class="about-container">
+
+
+  <div class="pt-20 pb-24">
+    <div class="container">
+      <h1 class="about__title">We are a team of experience professional in their Specialties</h1>
+      <div class="flex flex-wrap mt-5 xl:mt-8">
+        <div class="lg:w-1/2 lg:order-last">
+          <a href="javascript:void(0)" class="about__img relative block">
+            <img src="assets/images/about.jpg" alt="About" />
+            <mat-icon class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">play_circle_filled</mat-icon>
+          </a>
+        </div>
+        <div class="lg:w-1/2 lg:pr-10 mt-8 lg:mt-0 about__text">
+          <p class="mb-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur optio, perferendis, magnam accusantium reiciendis assumenda
+            repellat in qui, quos dolor esse quibusdam illum necessitatibus labore officia tempore modi placeat dolores!
+          </p>
+          <p class="mb-3">
+            lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doley.
+          </p>
+          <div class="experience grid grid-cols-3 gap-4 mt-6 xl:mt-16">
+            <div class="experience__item">
+              <h2>367+</h2>
+              <h6 class="font-semibold">SUCCEEDED PROJECT</h6>
+            </div>
+            <div class="experience__item">
+              <h2>500+</h2>
+              <h6 class="font-semibold">HAPPY CLIENT</h6>
+            </div>
+            <div class="experience__item">
+              <h2>12+</h2>
+              <h6 class="font-semibold">YEARS OF EXPERIENCE</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+  
+  
+  
+
+
+
+
+
+
 <div class="pt-20">
   <div class="container">
     <div class="grid grid-cols-12 gap-4 lg:gap-8 xxl:gap-16">
@@ -15,33 +56,48 @@
           <h3>Leave us a message</h3>
           <p>You will receive a response within 24 hours from our team.</p>
         </div>
-        <form>
+        <form [formGroup]="contactForm">
           <div class="flex flex-wrap sm:flex-nowrap sm:space-x-5 mt-3">
-            <input type="text" placeholder="Your Name" class="border border-gray-200 p-2 px-4 w-full sm:w-1/2 rounded-sm" />
+            <input type="text" 
+            placeholder="Your Name" 
+            class="border border-gray-200 p-2 px-4 w-full sm:w-1/2 rounded-sm"
+            formControlName="name" />
             <input
               type="number"
               placeholder="Your Number"
               class="border border-gray-200 p-2 px-4 w-full sm:w-1/2 rounded-sm mt-3 sm:mt-0"
+              formControlName="phone"
             />
           </div>
-          <input type="email" placeholder="Your Email" class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" />
-          <input type="text" placeholder="Subject" class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" />
-          <textarea
-            cols="10"
-            rows="3"
-            placeholder="Tell us about desired property"
-            [value]="''"
-            class="border border-gray-200 p-3 mt-5 w-full rounded-sm mt-5"
-          >
-          </textarea>
-          <button class="px-5 py-2 bg-accent text-white mt-5 rounded font-medium">Send Message</button>
+            <input 
+              type="email" 
+              placeholder="Your Email"
+              class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5" 
+              formControlName="email" />
+            <textarea
+              cols="10"
+              rows="3"
+              placeholder="Leave your message here ..."
+              class="border border-gray-200 p-3 mt-5 w-full rounded-sm mt-5"
+              formControlName="message"
+            >
+            </textarea>
+          <button 
+          class="px-5 py-2 text-white mt-5 rounded font-medium"
+           style="background-color: var(--purple);"
+           [disabled]="contactForm.pristine || contactForm.invalid"
+           (click)="addContact()">
+           Send Message
+          </button>
         </form>
       </div>
+
+
       <div class="col-span-12 lg:col-span-5 bg-black bg-opacity-90 text-white rounded p-8 xxl:px-16 mt-10 lg:mt-0">
         <h3>Contact info</h3>
         <div class="flex space-x-4 mt-14">
           <div class="flex pt-1 bg-purple-600 rounded-lg">
-            <mat-icon color="accent">settings_phone</mat-icon>
+            <mat-icon style="color:var(--purple)">settings_phone</mat-icon>
           </div>
           <div class="flex-1">
             <a href="callto:125512556523" class="text-gray-300 font-semibold hover:text-accent">+1255 - 1255 - 6523</a>
@@ -51,7 +107,7 @@
         </div>
         <div class="flex space-x-4 mt-8">
           <div class="flex pt-1 bg-purple-600 rounded-lg">
-            <mat-icon color="accent">mail_outline</mat-icon>
+            <mat-icon style="color:var(--purple)">mail_outline</mat-icon>
           </div>
           <div class="flex-1">
             <a href="mailto:mail@example.com" class="text-gray-300 font-semibold hover:text-accent">mail@example.com</a>
@@ -60,13 +116,13 @@
           </div>
         </div>
         <div class="flex space-x-4 mt-8">
-          <div class="flex pt-1 bg-purple-600 rounded-lg">
-            <mat-icon color="accent">map</mat-icon>
+          <div class="flex pt-1  rounded-lg">
+            <mat-icon  style="color:var(--purple)" >map</mat-icon>
           </div>
-          <div class="flex-1">
+          <div class="flex-1" >
             <a
               target="_blank"
-              href="https://www.google.com/maps/@23.6982376,90.3462922,19.25z"
+              href="https://www.google.com/maps/place/40%C2%B011'40.8%22N+105%C2%B019'32.3%22W/@40.194669,-105.3298772,17z/data=!3m1!4b1!4m14!1m7!3m6!1s0x54eab584e432360b:0x1c3bb99243deb742!2sUnited+States!3b1!8m2!3d37.09024!4d-95.712891!3m5!1s0x0:0x55ba4ddb8cd5ed29!7e2!8m2!3d40.1946654!4d-105.3256504"
               class="text-gray-300 hover:text-accent font-semibold"
             >
               Bowery St, New York, <br />
@@ -76,8 +132,10 @@
         </div>
       </div>
       <div class="col-span-12 mt-5">
-        <ll-google-location-map></ll-google-location-map>
+        <!-- <ll-google-location-map></ll-google-location-map> -->
       </div>
     </div>
   </div>
+</div>
+
 </div>
