--- a/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
+++ b/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
@@ -91,14 +91,14 @@
                       routerLink="/dashboard-naim-adminvv1/profile"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
-                      ><mat-icon class="mr-2">account_circle</mat-icon> View my profile</a
+                      ><mat-icon class="mr-2">account_circle</mat-icon>Users</a
                     >
                     <a
                       mat-list-item
                       routerLink="/dashboard-naim-adminvv1/saved-items"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
-                      ><mat-icon class="mr-2">list</mat-icon> Saved Items</a
+                      ><mat-icon class="mr-2">list</mat-icon>Messages</a
                     >
                     <a
                       mat-list-item
