--- a/client/src/app/product/product-list/product-list.component.html
+++ b/client/src/app/product/product-list/product-list.component.html
@@ -2,13 +2,13 @@
 <ll-product-hero></ll-product-hero>
 -->
 <br><br> <br> <br> <br>
-<div class="ll-search pb-6">
+<!-- <div class="ll-search">
   <div class="container">
     <div class="border overflow-hidden sm:rounded-md p-5">
-      <div class="mb-3">
+      <div class="">
         <div class="flex justify-between flex-wrap">
           <h4>Find your need</h4>
-          <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button><mat-icon>tune</mat-icon> ADVANCED SEARCH</button>
+          
         </div>
         <div class="mt-3 flex">
           <input
@@ -36,47 +36,36 @@
               placeholder="End price"
             />
           </div>
-          <!--  
-          <div class="col-span-6 sm:col-span-3">
-            <select
-              name="categories"
-              class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-            >
-              <option>Category</option>
-              <option>Microservices</option>
-              <option>Shipping Service</option>
-              <option>Consulting</option>
-            </select>
-          </div>
-          <div class="col-span-6 sm:col-span-3">
-            <select
-              name="rating"
-              class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-            >
-              <option>Rating</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-          </div>
-        -->
-          <div class="col-span-6">
-            <button mat-flat-button style="background-color: #89A6CE;">Apply filter</button>
-          </div>
         </div>
       </mat-expansion-panel>
     </div>
   </div>
-</div>
+</div> -->
 
   <div class="py-24 bg-gray-200">
-  <div class="old-container">
     <div>
       <h2 class="text-center mb-8">Choose your model
         to calculate the cost:</h2>
     </div>
+    <div class="ll-search">
+     <!-- container-->
+        <div class=" overflow-hidden sm:rounded-md p-5">
+          <div class="">
+            <div class="flex">
+              <input
+                type="text"
+                placeholder="I am looking for ..."
+                class="flex-1 w-full sm:text-sm lg:text-xl  py-3 px-6"
+                [(ngModel)]="filterBy" 
+              />
+            </div>
+          </div>
+        
+        </div>
+     
+    </div>
+  <div class="old-container">
+   
     <div class="flex items-center flex-wrap -mx-4 card-container">
       </div>
 
@@ -94,7 +83,7 @@
         </div>
       </div>  -->
       <div class="prodcuts-container">
-      <div class="product-card" *ngFor="let prod of products" [attr.data-index]="i">
+      <div class="product-card" *ngFor="let prod of products  | filter: filterBy:'name' "  [attr.data-index]="i">
         <div class="badge">Up to ${{prod.upPrice}}</div>
         <div class="product-tumb">
           <img src="{{prod.photo}}" alt="" (click)="openPopup(prod._id)">
