--- a/client/src/app/product/product-list/product-list.component.scss
+++ b/client/src/app/product/product-list/product-list.component.scss
@@ -122,7 +122,12 @@ a
     flex-wrap: wrap;
     flex-grow: 1;
 }
-
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .product-card {
     width: 380px;
     position: relative;
