fix responsiveness footer + header + icons

--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,54 +1,7 @@
 
 <div class="about-container">
 
-
-  <div class="pt-20 pb-24">
-    <div class="container">
-      <h1 class="about__title">We are a team of experience professional in their Specialties</h1>
-      <div class="flex flex-wrap mt-5 xl:mt-8">
-        <div class="lg:w-1/2 lg:order-last">
-          <a href="javascript:void(0)" class="about__img relative block">
-            <img src="assets/images/about.jpg" alt="About" />
-            <mat-icon class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">play_circle_filled</mat-icon>
-          </a>
-        </div>
-        <div class="lg:w-1/2 lg:pr-10 mt-8 lg:mt-0 about__text">
-          <p class="mb-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur optio, perferendis, magnam accusantium reiciendis assumenda
-            repellat in qui, quos dolor esse quibusdam illum necessitatibus labore officia tempore modi placeat dolores!
-          </p>
-          <p class="mb-3">
-            lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doley.
-          </p>
-          <div class="experience grid grid-cols-3 gap-4 mt-6 xl:mt-16">
-            <div class="experience__item">
-              <h2>367+</h2>
-              <h6 class="font-semibold">SUCCEEDED PROJECT</h6>
-            </div>
-            <div class="experience__item">
-              <h2>500+</h2>
-              <h6 class="font-semibold">HAPPY CLIENT</h6>
-            </div>
-            <div class="experience__item">
-              <h2>12+</h2>
-              <h6 class="font-semibold">YEARS OF EXPERIENCE</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-
-
-
-
-
-
-<div class="pt-20">
+<div class="pt-20" id="contactAdmin">
   <div class="container">
     <div class="grid grid-cols-12 gap-4 lg:gap-8 xxl:gap-16">
       <div class="contact__form col-span-12 lg:col-span-7">
