--- a/client/src/app/shared/components/header/header.component.html
+++ b/client/src/app/shared/components/header/header.component.html
@@ -12,12 +12,14 @@
             <a mat-button [routerLink]="[menu.path]"  class="text-lg font-bold py-2 px-5">{{ menu.name }}</a>
           </li>
         </ul>
+        <button 
+        *ngIf="isLoggedIn && isLessThenLargeDevice && !isTablet"
+        mat-icon-button 
+        class="_sidenav__toggler ml-auto md:ml-3 ms-sm-3 md:flex ml-auto shop">
+         <mat-icon>shopping_cart</mat-icon>
+       </button>
       </div>
-      <button *ngIf="isLoggedIn"
-       mat-icon-button 
-       class="_sidenav__toggler ml-auto md:ml-3 ms-sm-3 md:flex ml-auto shop">
-        <mat-icon>shopping_cart</mat-icon>
-      </button>
+
       <button
         *ngIf="isLessThenLargeDevice"
         (click)="toggleSidenav.emit()"
@@ -33,6 +35,13 @@
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon>more_vert</mat-icon>
         </button>
+
+        <button *ngIf="isLoggedIn && isTablet"
+             mat-icon-button 
+             class="_sidenav__toggler ml-auto md:ml-3 ms-sm-3 md:flex ml-auto shop">
+             <mat-icon>shopping_cart</mat-icon>
+       </button>
+      
         <mat-menu #menu="matMenu">
 
           <button mat-menu-item (click)="openLogin()"  *ngIf='!isLoggedIn' >
