--- a/client/src/app/product/product-list/product-list.component.html
+++ b/client/src/app/product/product-list/product-list.component.html
@@ -106,7 +106,7 @@
   </div>
    </div> 
 
-<div class="ll-find-more mt-10 mb-36">
+<!-- <div class="ll-find-more mt-10 mb-36">
   <div class="container rounded-md">
     <h2 class="ll-find-more__heading">Didn't find what you were looking for? There is more we can do for you.</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
@@ -122,4 +122,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
