--- a/client/src/app/product/product-details/product-details.component.html
+++ b/client/src/app/product/product-details/product-details.component.html
@@ -63,7 +63,7 @@
                *ngIf="isLoggedIn"
               mat-flat-button class="py-3 px-20 text-xl font-bold" 
               style="background-color: var(--purple); color:white"
-              (click)="addItemToCart(id)"
+              (click)="addItemToCart(device._id)"
               >Add to cart</button>
 
           </div>
