--- a/client/src/app/shared/components/footer/footer.component.scss
+++ b/client/src/app/shared/components/footer/footer.component.scss
@@ -7,7 +7,10 @@
 
 
 .footer-distributed{
-	background: #666;
+	//background: #666;
+	background: url('/assets/images/bg.jpg');
+	background-repeat: no-repeat;
+  background-size: cover;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
