--- a/client/src/app/shared/components/header/header.component.html
+++ b/client/src/app/shared/components/header/header.component.html
@@ -18,7 +18,10 @@
         routerLink="/cart"
         class="_sidenav__toggler ml-auto md:ml-3 ms-sm-3 md:flex ml-auto shop">
          <mat-icon>shopping_cart</mat-icon>
-         ( {{cartItems}}  )
+         <span style="font-size: larger;">
+          ( {{cartItems}} )
+         </span>
+         
        </button>
       </div>
 
@@ -43,7 +46,10 @@
              routerLink="/cart"
              class="_sidenav__toggler ml-auto md:ml-3 ms-sm-3 md:flex ml-auto shop">
              <mat-icon>shopping_cart</mat-icon>
-             ({{cartItems}} )
+             <span style="font-size: larger;">
+              ( {{cartItems}} )
+             </span>
+             
        </button>
       
         <mat-menu #menu="matMenu">
@@ -59,6 +65,10 @@
 
 
           <button mat-menu-item routerLink="/profile"  *ngIf='isLoggedIn'>
+            <mat-icon>home</mat-icon>
+            <span>Profile</span>
+          </button>
+          <button mat-menu-item routerLink="/dashboard-naim-adminvv1"  *ngIf='isLoggedIn && isAdmin' >
             <mat-icon>home</mat-icon>
             <span>Profile</span>
           </button>
